--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -9,3 +9,67 @@ img {
 .grapefruitelogo {
  width: 80px;
 }
+
+.headerTitle {
+    font-family: 'Rubik', sans-serif;
+}
+
+.headerContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.searchItem {
+    display: grid;
+    flex-wrap: wrap;
+    background-color: rgb(250, 230, 76);
+    width: 400px;
+    padding: 5px;
+    margin: 10px;
+    line-height: 25px;
+    list-style: none;
+    box-shadow: 3px 3px 15px rgb(228, 52, 52);
+    text-decoration: black;
+    color: black;
+    border-radius: 10px;
+}
+
+.artistAlbum {
+    display: grid;
+    flex-wrap: wrap;
+    background-color: rgb(250, 230, 76);
+    width: 400px;
+    padding: 5px;
+    margin: 10px;
+    line-height: 25px;
+    list-style: none;
+    box-shadow: 3px 3px 15px rgb(228, 52, 52);
+    text-decoration: black;
+    color: black;
+    border-radius: 10px;
+}
+
+.albumList {
+    list-style: none;
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+}
+
+.songItem {
+    display: grid;
+    flex-wrap: wrap;
+    background-color: rgb(250, 230, 76);
+    width: 400px;
+    padding: 5px;
+    margin: 10px;
+    line-height: 25px;
+    list-style: none;
+    box-shadow: 3px 3px 15px rgb(228, 52, 52);
+    text-decoration: black;
+    color: black;
+    border-radius: 10px;
+    font-size: 10px;
+}
